tests/frontend_syntax/invalid/unclosed_block.vit
space vitte/compiler/demo

proc main() -> int {
  give 0
